# RoboLab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/skills/: robolab-scenegen  robolab-taskgen
assets/scenes/: utensils_plate_dexterity.usda
dashboard/: app.py  cli.py
dashboard/loaders/: catalog.py  hdf5.py  local.py  sources.py
dashboard/static/: app.css  app.js
dashboard/templates/: index.html
docs/: README.md  dashboard.md  debug.md  env_vram_size_guide.md  known_issues.md  policy.md  sharpawave_benchmark_notes.md  statistical_significance.md
robolab/core/world/: world_state.py
skills/robolab-scenegen/: SKILL.md
